--- a/librerias/index.html
+++ b/librerias/index.html
@@ -7,8 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+
     
-    <script src="bucles.js"></script>
-    <script src="enumeradores.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script>
+
+        Swal.fire('Correcto', 'Ha instalado sweet alert correctamente', 'success');
+
+    </script>
+
 </body>
 </html>
